--- a/src/app/todo-form/todo-form.component.html
+++ b/src/app/todo-form/todo-form.component.html
@@ -1,16 +1,48 @@
-<form (ngSubmit)="submitTodo(todoForm);todoForm.resetForm({})" #todoForm="ngForm">
+<form
+  (ngSubmit)="submitTodo(todoForm); todoForm.resetForm({})"
+  #todoForm="ngForm"
+>
   <div class="form">
     <div class="input-group mb-3">
       <input
         type="text"
         class="form-control"
-      [(ngModel)]="newTodo.name" 
-      name="name"
-       #name='ngModel' 
+        [(ngModel)]="newTodo.name"
+        name="name"
+        #name="ngModel"
         placeholder="Add todo"
-        required  
+        required
       />
       <button type="submit" class="btn btn-success">ADD TODO</button>
     </div>
+    <!-- <button class="btn btn-lg btn-outline-primary" (click)="open(content)">
+      Launch demo modal
+    </button> -->
   </div>
 </form>
+
+<!-- 
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of birth</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template> -->
