add buttons to filter data state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark mx-auto">
-  <div class="container-fluid">
-    <h2 class="text-white ">Todo App</h2>
+  <div class="container-fluid nav">
+    <h2 class="text-white text-center">Todo App</h2>
   </div>
 </nav>
 
