--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-5">
   <div class="wrapper p-4">
-    <app-todo-list [todos]="todos"></app-todo-list>
     <app-todo-form (addTodo)="addNewTodo($event)"></app-todo-form>
+    <app-todo-list
+      [todos]="todos"
+  
+    ></app-todo-list>
   </div>
 </div>
